syntax = "proto2";
option cc_generic_services = true;

import "zeus.proto";

package youtu.zeus;
option go_package = "api/youtu_zeus";

service ZeusService
{
    rpc Retrieve(RetrieveReq) returns (RetrieveRsp);

    // fea related
    rpc AddFeas(AddFeasReq) returns (AddFeasRsp);
    rpc GetFeas(GetFeasReq) returns (GetFeasRsp);
    rpc GetFeasByEntity(GetFeasByEntityReq) returns (GetFeasByEntityRsp);
    rpc UpdateFeas(UpdateFeasReq) returns (UpdateFeasRsp);
    rpc DeleteFeas(DeleteFeasReq) returns (DeleteFeasRsp);
    rpc DeleteEntitys(DeleteEntitysReq) returns (DeleteEntitysRsp);
    rpc UpdateEntityId(UpdateEntityIdReq) returns (UpdateEntityIdRsp);
    rpc UpdateFeatures(UpdateFeaturesReq) returns (UpdateFeaturesRsp);
    rpc UpdateExtendInfos(UpdateExtendInfosReq) returns (UpdateExtendInfosRsp);

    // page related
    rpc TriggerPageUpdate(TriggerPageUpdateReq) returns (TriggerPageUpdateRsp);
    rpc GetGroupPageIds(GetGroupPageIdsReq) returns (GetGroupPageIdsRsp);
    rpc GetPageFeaEntityIds(GetPageFeaEntityIdsReq) returns (GetPageFeaEntityIdsRsp);
    rpc GetPageFeatures(GetPageFeaturesReq) returns (GetPageFeaturesRsp);
    rpc ClearFeatures(ClearFeaturesReq) returns (ClearFeaturesRsp);

    // group related
    rpc CreateGroup(CreateGroupReq) returns (CreateGroupRsp);
    rpc GetGroupSize(GetGroupSizeReq) returns (GetGroupSizeRsp);
    rpc GetGroupFeaIds(GetGroupFeaIdsReq) returns (GetGroupFeaIdsRsp);
    rpc GetGroupEntityIds(GetGroupEntityIdsReq) returns (GetGroupEntityIdsRsp);
    rpc GetGroupDetail(GetGroupDetailReq) returns (GetGroupDetailRsp);
    rpc TruncateGroup(TruncateGroupReq) returns (TruncateGroupRsp);
    rpc AddFeatureConfig (AddFeatureConfigReq) returns (AddFeatureConfigRsp);
    rpc DeleteFeatureConfig (DeleteFeatureConfigReq) returns (DeleteFeatureConfigRsp);
    rpc DeleteGroup(DeleteGroupReq) returns (DeleteGroupRsp);
    rpc DeleteGroupAsync(DeleteGroupReq) returns (DeleteGroupRsp);
    rpc GetDeleteGroupAsyncState (GetDeleteGroupAsyncStateReq) returns (GetDeleteGroupAsyncStateRsp);

    // cache related
    rpc TrimCache(TrimCacheReq) returns (TrimCacheRsp);
    rpc DeleteCache(DeleteCacheReq) returns (DeleteCacheRsp);
    rpc WarmUpCache(WarmUpCacheReq) returns (WarmUpCacheRsp);
}
